
CHANGES IN VERSION 0.99.12
------------------------
* Incorporating immApex Usage
* Update ```CoNGAfy()``` to support all versions of Seurat
* Update trex_example to Seurat v5


CHANGES IN VERSION 0.99.11
------------------------
* Added geometric encoding using the BLOSUM62 matrix
* Sequence input: 
	- TRA: 905611
	- TRB: 1276462
* Trained classical and variational autoencoders for TRA/TRB chains
 	- Architecture: 256-128-30-128-256
	- Parameters: 
		Batch Size = 64
		Latent Dimensions = 30
		Epochs = 100
		Loss = Mean Squared Error
	- Optimizers: Adam
	- Early stopping was set to patients of 10 for minimal validation loss and restoration of best weights
	- learn rate varied by models
	- classical auto encoders have batch normalization layers between the dense layers. 

DEPRECATED AND DEFUNCT

* Deprecate clonalCommunity() 


CHANGES IN VERSION 0.99.10
------------------------
- fixed issuer with TRB OHE encoder returning NaN or zero values
- "both" call now pulls all AF/KF without error

CHANGES IN VERSION 0.99.9
------------------------
- maTrex() now offers support for scRepertoire combineTCR() output and not just single-cell objects alone.
- CoNGAfy() function modified for additional meta variable support - will automatically check the duplicated clones for multiple values and condense with ";"
- New format of encoder models to reduce size of package


CHANGES IN VERSION 0.99.8
------------------------
- update to the database used in annotateDB(), cleaned data extensively
- Correct CoNGAfy() function to fix mean-based reduction
- Added edit distance parameter to annotateDB()

CHANGES IN VERSION 0.99.7
------------------------
- Added one hot auto encoder to model options


CHANGES IN VERSION 0.99.7
------------------------

* Dev/Maine pull - will update move towards new model architecture from here.


CHANGES IN VERSION 0.99.6
------------------------
