@@ -11,6 +11,7 @@ importFrom(SeuratObject,CreateAssayObject)
 importFrom(SeuratObject,CreateDimReducObject)
 importFrom(SeuratObject,CreateSeuratObject)
 importFrom(SeuratObject,DefaultAssay)
+importFrom(SeuratObject,VariableFeatures)
 importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(SingleCellExperiment,colData)
