@@ -4,6 +4,7 @@ CHANGES IN VERSION 0.99.12
 * Incorporating immApex Usage
 * Update ```CoNGAfy()``` to support all versions of Seurat
 * Update trex_example to Seurat v5
+* Updated ```quietTCRgenes()``` to used VariableFeatures() call
 
 
 CHANGES IN VERSION 0.99.11
